@startuml MER_RESERVA
title MER del módulo principal — Reserva (3FN)

hide circle
hide methods
skinparam linetype ortho
skinparam shadowing false
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12
skinparam arrowColor black
skinparam entity {
  BackgroundColor white
  BorderColor black
}

entity CLIENTE {
  * id : PK
  --
  * nombre
  * apellido
  * tipo_documento
  * numero_documento
  usuario_id : FK → USUARIO
}

entity DESTINO {
  * id : PK
  --
  * nombre
}

entity UNIDAD {
  * id : PK
  --
  * placa
}

entity ASIENTO {
  * id : PK
  --
  * unidad_id : FK
  * codigo
}

entity VIAJE {
  * id : PK
  --
  * destino_id : FK
  * unidad_id : FK
  * fecha_salida
  estado
}

entity PUNTO_RECOGIDA {
  * id : PK
  --
  * nombre
  * tipo
}

entity RESERVA {
  * id : PK
  --
  * cliente_id : FK
  * viaje_id : FK
  * estado
  fecha_reserva
}

entity RESERVA_CLIENTE {
  * id : PK
  --
  * reserva_id : FK
  * cliente_id : FK
  es_titular
  es_menor
  ocupa_asiento
  precio_pasajero_eur
  punto_recogida_id : FK
}

entity ASIENTO_RESERVADO {
  * id : PK
  --
  * reserva_cliente_id : FK
  * viaje_id : FK
  * asiento_id : FK
}

entity PAGO {
  * id : PK
  --
  * reserva_id : FK
  * metodo_pago_id : FK
  * tasa_id : FK
  * monto
  estado
}

CLIENTE ||--o{ RESERVA : titular
CLIENTE ||--o{ RESERVA_CLIENTE : viaja
CLIENTE }o--o{ PUNTO_RECOGIDA : usa
DESTINO ||--o{ VIAJE
UNIDAD ||--o{ VIAJE
UNIDAD ||--|{ ASIENTO
VIAJE ||--o{ RESERVA
RESERVA ||--|{ RESERVA_CLIENTE
PUNTO_RECOGIDA ||--o{ RESERVA_CLIENTE
RESERVA_CLIENTE ||--o{ ASIENTO_RESERVADO
ASIENTO ||--o{ ASIENTO_RESERVADO
VIAJE ||--o{ ASIENTO_RESERVADO
RESERVA ||--o{ PAGO

note right of RESERVA_CLIENTE
  3FN: nombre, apellido y cédula
  viven en CLIENTE, no aquí.
  Unique: reserva + cliente vigente.
end note

note right of ASIENTO_RESERVADO
  Unique: asiento + viaje vigente.
  Un puesto no se vende dos veces.
end note

@enduml
